tests/rosetta/out/Rust/box-the-compass.error
rustc error: exit status 1
error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:41:38
   |
41 |                 while s.len() as i32 < need {
   |                                      ^ ------ interpreted as generic arguments
   |                                      |
   |                                      not interpreted as comparison
   |
help: try comparing the cast value
   |
41 |                 while (s.len() as i32) < need {
   |                       +              +

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:67:112
   |
67 | ...{}{}", format!("{}{}", format!("{}{}", padLeft(idx.to_string(), 4), "   "), padRight(cp, 19)), " "), format2(h)), "°"));
   |                                           ------- ^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |                                           |
   |                                           arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:3:8
   |
3  |     fn padLeft(s: &'static str, w: i32) -> &'static str {
   |        ^^^^^^^ ---------------
help: consider borrowing here
   |
67 |         println!("{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", format!("{}{}", padLeft(&idx.to_string(), 4), "   "), padRight(cp, 19)), " "), format2(h)), "°"));
   |                                                                                                                +

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
 --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:7:13
  |
7 |             res += " ";
  |             ---^^^^^^^
  |             |
  |             cannot use `+=` on type `&str`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:10:16
   |
3  |     fn padLeft(s: &'static str, w: i32) -> &'static str {
   |                                            ------------ expected `&str` because of return type
...
10 |         return format!("{}{}", res, s);
   |                ^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:16:13
   |
16 |             out += " ";
   |             ---^^^^^^^
   |             |
   |             cannot use `+=` on type `&str`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:24:35
   |
24 |             if &s[i as usize..i + 1 as usize] == ch {
   |                                   ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:24:31
   |
24 |             if &s[i as usize..i + 1 as usize] == ch {
   |                               ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:24:33
   |
24 |             if &s[i as usize..i + 1 as usize] == ch {
   |                                 ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:33:27
   |
33 |         let idx = indexOf(s, ".");
   |                   ------- ^ expected `&str`, found `String`
   |                   |
   |                   arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:21:8
   |
21 |     fn indexOf(s: &'static str, ch: &'static str) -> i32 {
   |        ^^^^^^^ ---------------
help: consider borrowing here
   |
33 |         let idx = indexOf(&s, ".");
   |                           +

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:39:21
   |
32 |         let mut s = f.to_string();
   |                     ------------- expected due to this value
...
39 |                 s = &s[0 as usize..need as usize];
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `&str`
   |
help: try using a conversion method
   |
39 |                 s = (&s[0 as usize..need as usize]).to_string();
   |                     +                             +++++++++++++

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:46:16
   |
31 |     fn format2(f: f64) -> &'static str {
   |                           ------------ expected `&'static str` because of return type
...
46 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
46 |         return &s;
   |                +

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/TestMochiRustGoldenbox-the-compass452250133/001/prog.rs:49:41
   |
49 |         let mut x = ((h / 11.25) + 0.5).parse::<i32>().unwrap();
   |                                         ^^^^^ method not found in `f64`

error: aborting due to 12 previous errors

Some errors have detailed explanations: E0277, E0308, E0368, E0599.
For more information about an error, try `rustc --explain E0277`.
